70% implementation